--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory=./ansible_hosts
+# inventory=./ansible_hosts
+inventory=inventory/01_aws_ec2.yml   
 remote_user=ec2-user
 private_key_file=~/.ssh/default-ec2.pem
 host_key_checking=False
